<resources>
    <string name="app_name">AboutME</string>
    <string name="name">Aleks Heacky</string>
    <string name="yellow_star">Yellow star</string>
    <string name="bio">
        Experiment with adding an ImageView above the TextView inside the ScrollView.
        \n\n When you run the app, this image,
        \n\n unlike the star, will scroll out of view as the text scrolls up.
        \n\n Hint: You will need to wrap the two scrollable views into a LinearLayout inside the ScrollView.
        \n\n ScrollView > LinerLayout > ImageView + TextView
        \n\n Below is a skeleton code version for this challenge.
        \n\n The important thing to remember is that since ScrollView can only have one child,
        \n\n you have to wrap that ImageView and the TextView into a LinearLayout.
        \n\n There is no solution code provided for this challenge,
        \n\n but the skeleton code below gives you the expected view hierarchy to use.
        \n\n SKELETON code of view hierarchy:
    </string>
    <string name="what_is_your_nickname">What is your Nickname</string>
    <string name="done">Done</string>
</resources>
