<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="myName"
                type="com.example.android.aboutme.MyName"/>
    </data>

    <LinearLayout  android:orientation="vertical"
                   android:paddingStart="16dp"
                   android:paddingEnd="16dp"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

        <TextView
                android:text="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@={myName.name}"
                android:textAlignment="center"
                style="@style/NameStyle"
                android:textColor="@android:color/black"/>
        <!--
            style="@style/NameStyle"
            따로 외부로 스타일을 빼뒀음
            공통이 되는 스타일요소들은 이렇게 하는것도
            간단하게 코딩하는 방법인 것 같다
        -->
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/nickname_edit"
                style="@style/NameStyle"
                android:hint="@string/what_is_your_nickname"
        />
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/done_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/layout_margin"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/done"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nickname_text"
                style="@style/NameStyle"
                android:textAlignment="center"
                android:visibility="gone"
                android:text="@={myName.nickname}"/>
        <ImageView
                android:id="@+id/star_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/btn_star_big_on"
                android:contentDescription="@string/yellow_star"
                android:layout_marginTop="@dimen/layout_margin"/>
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bio_text" style="@style/NameStyle"
                    android:paddingStart="@dimen/padding"
                    android:paddingEnd="@dimen/padding"
                    android:lineSpacingMultiplier="1.2"/>


           <!--
           ScrollView안에 TextView와 ImageView를 넣는 방법.
           ScrollView는 하나만 안에 넣을 수 있으므로
           ScrollView -> LinearLayout -> ImageView + TextView를 넣는다.
           이렇게하면 별 이미지와는 다르게 스크롤을 하면 이미지가 안보인다
           <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@android:drawable/ic_menu_view" />

                <TextView
                        android:text="@string/bio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/bio_text" style="@style/NameStyle"
                        android:paddingStart="@dimen/padding"
                        android:paddingEnd="@dimen/padding"
                        android:lineSpacingMultiplier="1.2"/>

            </LinearLayout>
            -->

        </ScrollView>

    </LinearLayout>
</layout>
